syntax = "proto3";

package rpc;

option go_package = "./proto;rpc";

service Snapshot {
  rpc GetAddressPower(AddressPowerRequest) returns (AddressPowerResponse) {}
  rpc SyncDateHeight(SyncDateHeightRequest) returns (SyncDateHeightResponse) {}
  rpc SyncAddrPower(SyncAddrPowerRequest) returns (SyncAddrPowerResponse) {}
  rpc SyncAllAddrPower(SyncAllAddrPowerRequest) returns (SyncAllAddrPowerResponse){}
  rpc UploadSnapshotInfoByDay(UploadSnapshotInfoByDayRequest) returns (UploadSnapshotInfoByDayResponse) {}
  rpc GetDataHeight(DataHeightRequest) returns (DataHeightResponse) {}
  rpc GetAddressPowerByDay(AddressPowerByDayRequest) returns (AddressPowerResponse) {}
  rpc GetAllAddrPowerByDay(GetAllAddrPowerByDayRequest) returns (GetAllAddrPowerByDayResponse) {}
}

message GetAllAddrPowerByDayRequest {
  string day = 1;
  int64 netId = 2;
}

message GetAllAddrPowerByDayResponse {
  string day = 1;
  string info = 3; 
  int64 netId = 4;
}

message DataHeightRequest{
    int64  netId = 1;
    string day = 2;
}

message AddressPowerByDayRequest{
  int64  netId = 1;
  string address = 2;
  string day = 3;
}

message DataHeightResponse {
  string day = 1;
  int64 height = 2;
}

message  SyncAllAddrPowerRequest {
  int64  netId = 1;
}

message AddressPowerRequest {
  int64  netId = 1;
  string address = 2;
  int32  random_num = 3;
}

message SyncDateHeightRequest {
  int64  netId = 1;
}

message SyncAddrPowerRequest {
  int64  netId = 1;
  string address = 2;
}

message AddressPowerResponse {
  string address = 1;
  string sp_power = 2;
  string client_power = 3;
  string token_holder_power = 4;
  string developer_power = 5;
  int64 block_height = 6;
  string date_str = 7;
}

message UploadSnapshotInfoByDayRequest {
  string day = 1;
  int64 netId = 2;
}

message SyncAllAddrPowerResponse{

}

message SyncDateHeightResponse {

}

message SyncAddrPowerResponse {

}
message UploadSnapshotInfoByDayResponse {
  string day = 1;
  int64 height=2;
}